--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+
+
+h1,body{
+    font-family: 'Inter', sans-serif;
+    background: #007AFF;
+    color: #ffffff;
+
+}
+
 body{
     color: rgb(0, 0, 0);
     background: aliceblue;
@@ -14,7 +23,26 @@ border-style: none;
 /* base-blue */
 color: #ffffff;
 background: #007AFF;
-border-radius: 4px;
+border-radius: 8px;
 cursor: pointer;
+}
 
+
+button1{
+    width: 87px;
+height: 20px;
+left: 24px;
+top: 10px;
+
+font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 20px;
+}
+
+div 
+{
+padding: 16px;
+display: flex;
 }
