--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
   --font-size-s : 12px;
   --font-size-m : 14px;
   --font-size-l : 16px;
-  --font-size-xl : 22x;
+  --font-size-xl : 22px;
 }
 
    
