--- a/style.css
+++ b/style.css
@@ -164,21 +164,45 @@ a{
 .btn-primary
 {
 
-    display: inline-flex;
+display: inline-flex;
 border-radius: 4px;
-
-
 font-family: 'Inter', sans-serif;
 font-weight: normal;
 font-size: var(--font-size-m);
 line-height: 20px;
+margin-bottom: 24px;
 
 }
 
 
+.btn-secondary
+{
+background-color: white;
+color: #7A8898;
+display: inline-flex;
+border: 1px solid #e1e4e8;
+border-radius: 4px;
+font-family: 'Inter', sans-serif;
+font-weight: normal;
+font-size: var(--font-size-m);
+line-height: 20px;
+margin-bottom: 24px;
+padding: 10px 18px 10px 18px ;
+
+}
+
+.btn-secondary :hover{
+    color: var(--color-neutral-400);
+}
+
+
+
+
+
+
 
 .button__text{
-    padding: 10px 24px 10px 24px;
+    padding: 10px 0px 10px 24px;
 background: var(--color-primary-400);
 color: white;
 border-radius: 4px;
@@ -194,3 +218,63 @@ align-items:center;
 padding: 0 10px;
 height: 100%;
 }
+
+
+.wrapper1{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+
+input[type=text]:focus {
+    outline: none;
+    border: 2px solid #66AFFF;
+  }
+
+.label{
+    color: #474d66;
+    font-family: 'Inter', sans-serif;
+    font-size: var(--font-size-m);
+    font-weight: 400;
+    min-height: 16px;
+
+}
+
+.fname {
+    margin-top: 8px;
+    background-color: white;
+    border-radius: 4px;
+    border: 1px solid var(--color-neutral-100);
+    height: 32px;
+    min-width: 216px;
+    padding: 6px 10px;
+    margin-bottom: 24px;
+}
+
+.lname {
+    margin-top: 8px;
+    background-color: white;
+    border-radius: 4px;
+    border: 1px solid var(--color-neutral-100);
+    height: 32px;
+    min-width: 216px;
+    padding: 6px 10px;
+
+}
+
+
+.blue100
+{
+    width: 48px;
+    height: 48px;
+    background-color: var(--color-primary-400);
+    border-radius: 4px;
+    margin-bottom: 24px;
+
+}
+
+
+
+
+
